implementando=mongo-e-view

--- a/Arq-Server-Side/postcard-collection/views/index.ejs
+++ b/Arq-Server-Side/postcard-collection/views/index.ejs
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Postcards</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1>Postcards</h1>
+    <ul>
+      <% postcards.forEach(postcard => { %>
+        <li>
+          <strong><%= postcard.name %></strong> - <%= postcard.cidade %>, <%= postcard.pais %>
+          <a href="/edit/<%= postcard._id %>">Editar</a>
+          <a href="/delete/<%= postcard._id %>">Excluir</a>
+        </li>
+      <% }); %> 
+    </ul>
+    <a href="/add">Adicionar Postcard</a>
   </body>
 </html>
